Change scrollbar, Fix chatInput position, fix message container size

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -35,3 +35,20 @@ body {
   flex-direction: row;
   height: 100%;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(0, 0, 0);
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: darken($dark-background, 5);
+  border-radius: 10px;
+}
